<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="title">Accuracy</string>
    <string name="hint1">Player 1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="player_turn">Player 1 \'s turn</string>
    <string name="round_details">Round : </string>
    <string name="reset_button">Reset</string>
    <string name="start_button">Start</string>
    <string name="quit_button">Quit</string>
    <string name="ready_button">Ready</string>
</resources>
